<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ezouagh.quiz.Register"
    android:background="@color/bright_foreground_material_dark">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/AppnameColor"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/abc_action_bar_default_padding_material">
            </com.google.android.gms.ads.AdView>
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">
            <TextView android:text="@string/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/AppNameSize"
                android:id="@+id/TextViewRegister"
                android:gravity="center_horizontal"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/abc_edit_text_inset_horizontal_material"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/AppnameColor"/>

            <TextView android:text="@string/FullNameRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:id="@+id/FullNameRequired"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/error"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/FullNameEditText"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/InputSize"
                android:hint="@string/FullName"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />




            <TextView android:text="@string/BirthDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/InputSize"
                android:id="@+id/BirthDayEditTXT"
                android:gravity="center"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
            />
            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/BirthDay"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />


            <TextView android:text="@string/EmailRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:id="@+id/RequiredEmail"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/error"
                android:visibility="gone" />

            <TextView android:text="@string/EmailFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:id="@+id/FormatEmail"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/error"
                android:visibility="gone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/EditTextEmail"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/InputSize"
                android:hint="@string/Email"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView android:text="@string/PassRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:id="@+id/RequiredPass"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/error"
                android:visibility="gone" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/EditTextPass"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/InputSize"
                android:hint="@string/Pass"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/BTNRegister"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/InputSize"
                android:textColor="@color/bright_foreground_material_dark"
                android:text="@string/Register"
                android:background="@drawable/btn_click" />

            <TextView android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:id="@+id/BTNLogin"
                android:gravity="center_horizontal"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/AppnameColor" />
        </LinearLayout>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/abc_action_bar_icon_vertical_padding_material">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


