<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:ads="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="ezouagh.quiz.Starting"
android:background="@color/bright_foreground_material_dark">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="#449def"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/StartingScrollView" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/abc_edit_text_inset_horizontal_material"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_gravity="center_horizontal"
            >
        </com.google.android.gms.ads.AdView>
        <ImageView
            android:src="@drawable/splash"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/Logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/abc_action_bar_default_padding_material"/>
        <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bright_foreground_material_dark"
    android:paddingRight="@dimen/abc_dialog_padding_material"
    android:paddingLeft="@dimen/abc_dialog_padding_material">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/StartBTN"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/bright_foreground_material_dark"
            android:text="@string/Go"
            android:background="@drawable/btn_click"
            style="@style/ButtonText"
            android:gravity="center"
            android:padding="@dimen/abc_action_bar_default_padding_material"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/AcountBTN"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/InputSize"
            android:textColor="@color/bright_foreground_material_dark"
            android:text="@string/Acount"
            android:background="@drawable/btn_click"
            style="@style/ButtonText"
            android:gravity="center"
            android:padding="@dimen/abc_action_bar_default_padding_material"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/SettingsBTN"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/InputSize"
            android:textColor="@color/bright_foreground_material_dark"
            android:text="@string/action_settings"
            android:background="@drawable/btn_click"
            style="@style/ButtonText"
            android:gravity="center"
            android:padding="@dimen/abc_action_bar_default_padding_material"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/LogOutBTN"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textSize="@dimen/InputSize"
            android:textColor="@color/bright_foreground_material_dark"
            android:text="@string/Logout"
            android:background="@drawable/btn_click"
            style="@style/ButtonText"
            android:gravity="center"
            android:padding="@dimen/abc_action_bar_default_padding_material"/>
    </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id2"
            android:layout_gravity="center_horizontal"
            >
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</ScrollView>
</LinearLayout>