<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ezouagh.quiz.Login"
    android:background="@color/bright_foreground_material_dark">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/AppnameColor"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                >

                <TextView
                    android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/AppNameSize"
                android:id="@+id/LoginTextView"
                android:gravity="center_horizontal"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/abc_edit_text_inset_top_material"
                android:layout_marginBottom="@dimen/abc_edit_text_inset_bottom_material"
                android:textColor="@color/AppnameColor"/>
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/abc_control_corner_material">
                </com.google.android.gms.ads.AdView>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/abc_floating_window_z"
                android:paddingRight="@dimen/abc_floating_window_z">
                <TextView android:text="@string/EmailRequired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:id="@+id/EmailRequired"
                    android:textIsSelectable="false"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                   android:textColor="@color/error"
                    android:visibility="gone" />

                <TextView android:text="@string/EmailFormat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:id="@+id/EmailFormat"
                    android:textIsSelectable="false"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textColor="@color/error"
                    android:visibility="gone"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/EmailEditText"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textSize="@dimen/InputSize"
                    android:hint="@string/Email"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <TextView android:text="@string/PassRequired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:id="@+id/PassRequired"
                    android:textIsSelectable="false"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textColor="@color/error"
                    android:visibility="gone" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/PassEditText"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/InputSize"
                android:hint="@string/Pass"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:password="true"
                android:singleLine="true"
                android:textIsSelectable="false" />

                <TextView android:text="@string/Error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:id="@+id/Error"
                    android:textIsSelectable="false"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/error"
                    android:visibility="gone" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/LoginBTN"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/InputSize"
                android:textColor="@color/bright_foreground_material_dark"
                android:text="@string/login"
                android:enabled="true"
                android:background="@drawable/btn_click"
                android:focusable="true"
                android:layout_marginLeft="@dimen/abc_edit_text_inset_horizontal_material"
                android:layout_marginRight="@dimen/abc_edit_text_inset_horizontal_material"
                android:padding="@dimen/abc_edit_text_inset_horizontal_material"/>

            <TextView android:text="@string/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_large_material"
                android:id="@+id/RegisterBTN"
                android:gravity="center_horizontal"
                android:textIsSelectable="false"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@color/AppnameColor"
                      android:textStyle="bold"
                />
            </LinearLayout>
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id2"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/abc_action_bar_default_padding_material">
                </com.google.android.gms.ads.AdView>
            </LinearLayout>
        </ScrollView>
</LinearLayout>


